
import "google/protobuf/empty.proto";
syntax = "proto3";

package user;

service UserController {
  rpc FindOne (Id) returns (User) {}
  rpc FindAll (google.protobuf.Empty) returns (Users) {}
  rpc AddUser (UserInfo) returns (successMessage){}
  rpc UpdateUser(ReqBodyUpdateUSer) returns(successMessage){}
  rpc DeleteUser(Id) returns(successMessage){}
}


message Id {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string firstName = 2;
  string lastName=3;
  double phoneNumber=4;
}
message Users{

  repeated User data=1;
}

message Empty{

}
message UserInfo{
  string firstName = 1;
  string lastName=2;
  double phoneNumber=3;
}

message successMessage{
  string msg=1;
}

message ReqBodyUpdateUSer{
 int32 id =1;
 User  info=2;
}